--- a/site-fhc/src/ui/components/geral/Header.css
+++ b/site-fhc/src/ui/components/geral/Header.css
@@ -1,10 +1,12 @@
 header{
-    background-color: #EAE8E8;
-    color: #121111;
+    background-color: #C00606;
     margin: 0px;
     padding: 20px;
     display: flex;
-    flex-direction: column;
+    flex-flow: row wrap;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 header img{
@@ -14,19 +16,28 @@ header img{
 }
 
 ul{
-    display: flex;
     margin: 0px;
-    justify-content: flex-end;
-    align-items: flex-end;
+    width: 90%;
+    padding-right: 15px;
 }
 
 li{
-    margin-left: 15px;
+    margin-left: 20px;
     list-style: none;
+    float: right;
 }
 
 .link{
-    color: #121111;
+    color: #F6F6F6;
+    text-decoration: none;
+}
+
+.link:hover{
+    background-color: #810404;
+    padding: 5px 7px 5px 7px;
+    text-decoration: underline;
+    font-weight: 500;
+    border-radius: 2px;
 }
 
 h1, h2{
