Estilizando página da ouvidoria

--- a/site-fhc/src/ui/components/home/style/Home.css
+++ b/site-fhc/src/ui/components/home/style/Home.css
@@ -1,5 +1,5 @@
 .container-pesquisa-home{
-    background-image: url('./img/frenteHospital.jpeg');
+    background-image: url('../img/frenteHospital.jpeg');
     background-size: cover;
     background-color: #C00606;
     margin: 0px;
