--- a/site-fhc/src/ui/components/geral/style/Header.css
+++ b/site-fhc/src/ui/components/geral/style/Header.css
@@ -1,30 +1,36 @@
 header{
     background-color: #C00606;
     margin: 0px;
-    padding: 20px;
+    padding: 8px;
     display: flex;
-    flex-flow: row wrap;
+    position: sticky;
+    top: 0;
+    align-self: flex-start;
+    flex-flow: row;
     width: 100%;
-    justify-content: flex-end;
-    align-items: flex-end;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 header img{
-    width: 9%;
+    width: 19%;
     height: auto;
     margin: 0px;
+    padding-left: 2%;
 }
 
-ul{
+header ul{
     margin: 0px;
-    width: 90%;
+    width: 100%;
     padding-right: 15px;
+    display: flex;
+    flex-flow: row-reverse;
+    justify-content: right;
+    align-items: center;
 }
 
 li{
     margin-left: 20px;
     list-style: none;
-    float: right;
 }
 
 .link{
