--- a/site-fhc/src/ui/components/home/style/AlbumBebes.css
+++ b/site-fhc/src/ui/components/home/style/AlbumBebes.css
@@ -2,6 +2,7 @@
     background-color: #F6F6F6;
     width: 100%;
     margin-top: 5%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.089), 0 6px 20px 0 rgba(0, 0, 0, 0.105);
 }
 
 .container-album-home h2{
