--- a/site-fhc/src/ui/components/home/style/Noticias.css
+++ b/site-fhc/src/ui/components/home/style/Noticias.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 2% 10% 2% 10%;
+    padding: 2% 10% 5% 10%;
     background-color: #EAE8E8;
 }
 
@@ -27,6 +27,7 @@
     background-color: #F6F6F6;
     padding: 20px;
     text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.089), 0 6px 20px 0 rgba(0, 0, 0, 0.105);
 }
 
 .container-noticia-home h3{
