--- a/site-fhc/src/ui/components/ouvidoria/style/Ouvidoria.css
+++ b/site-fhc/src/ui/components/ouvidoria/style/Ouvidoria.css
@@ -1,3 +1,21 @@
+.container-titulo{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: left;
+    align-items: flex-start;
+    width: 88%;
+    margin: 5% 6% 1% 6%;
+}
+
+.container-titulo h1{
+    margin: 0px;
+    margin-bottom: 1.5%;
+}
+
+.container-titulo hr{
+    width: 10%;
+}
+
 .container-contatos{
     display: flex;
     flex-flow: column wrap;
@@ -7,8 +25,9 @@
     margin: 4% 6% 5% 6%;
     padding-bottom: 3%;
     padding-top: 0.75%;
-    background-color: #EAE8E8;
+    background-color: #cfcfcf;
     border-radius: 11px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.051), 0 6px 20px 0 rgba(0, 0, 0, 0.056);
 }
 
 .container-contatos h2{
@@ -22,24 +41,27 @@
 
 .container-telefone{
     display: flex;
+    width: 100%;
+    justify-content: center;
     margin-bottom: 2%;
+}
+
+.container-telefone .bold{
+    margin-right: 4px;
 }
 
 .bold{
     font-weight: 700;
 }
 
-.container-telefone p{
-    /* margin-right: 1%; */
-}
-
 .container-ouvidoria{
     width: 88%;
     margin: 4% 6% 8% 6%;
     padding-bottom: 3%;
-    padding-top: 0.75%;
-    background-color: #EAE8E8;
+    padding-top: 2%;
+    background-color: #cfcfcf;
     border-radius: 11px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.051), 0 6px 20px 0 rgba(0, 0, 0, 0.056);
 }
 
 .container-ouvidoria form{
@@ -52,12 +74,18 @@
 
 input, select, textarea{
     width: 50%;
-    border: 1px solid #EAE8E8;
+    border: none;
     border-radius: 11px;
     margin: 1%;
     padding: 10px;
     font-weight: 500;
     font-size: 15px;
+}
+
+input:focus, textarea:focus, select:focus{
+    /* outline: #C00606 solid 2px; */
+    outline: #2727276b solid 2px;
+
 }
 
 .container-ouvidoria .btn{
