--- a/site-fhc/src/ui/components/home/style/Home.css
+++ b/site-fhc/src/ui/components/home/style/Home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 .container-pesquisa-home{
     background-image: url('../img/frenteHospital.jpeg');
     background-size: cover;
@@ -5,18 +7,26 @@
     margin: 0px;
     height: 550px;
     background-position: initial;
+    background-color: rgba(0, 0, 0, 0.107);
 }
 
 .container-pesquisa-home h1{
     margin: 0px;
     padding-top: 10%;
     font-size: 80px;
+    font-family: "Barlow Condensed", sans-serif;    
+    font-optical-sizing: auto;
+    font-weight: 700;
+    letter-spacing: 4px;
+    color: #F6F6F6;
 }
 
 .container-pesquisa-home h2{
-    font-size: 35px;
-    letter-spacing: 2.5px;
-    font-weight: 500;
+    font-size: 32px;
+    letter-spacing: 2px;
+    font-weight: 600;
+    font-family: "Montserrat", sans-serif;
+    color: #F6F6F6;
 }
 
 .container-intro-home{
