--- a/site-fhc/src/ui/components/home/style/home/Home.css
+++ b/site-fhc/src/ui/components/home/style/home/Home.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 .container-pesquisa-home{
-    background-image: url('../img/frenteHospital.jpeg');
+    background-image: url('../../img/frenteHospital.jpeg');
     background-size: cover;
     background-color: #C00606;
     margin: 0px;
@@ -69,6 +69,7 @@
     width: 40%;
     height: auto;
     padding: 2%;
+    padding-bottom: 25px;
     background-color: #C00606;
     font-size: 30px;
     color: #F6F6F6;
