--- a/site-fhc/src/ui/components/geral/style/footer/FooterSmartphone.css
+++ b/site-fhc/src/ui/components/geral/style/footer/FooterSmartphone.css
@@ -15,4 +15,18 @@
         width: 100px;
         margin-top: 28px;
     }
+
+    .img-redes-facebook{
+        width: 19px;
+        height: auto;
+        padding-top: 0px;
+        padding-left: 0px;
+    }
+
+    .img-redes-instagram{
+        width: 19px;
+        height: auto;
+        padding-top: 0px;
+        padding-left: 0px;
+    }
 }
