--- a/site-fhc/src/ui/components/geral/style/header/Header.css
+++ b/site-fhc/src/ui/components/geral/style/header/Header.css
@@ -1,5 +1,5 @@
 header{
-    background-color: #C00606;
+    background-color: rgb(245, 245, 245);
     margin: 0px;
     padding: 8px;
     display: flex;
@@ -34,16 +34,18 @@ li{
 }
 
 .link{
-    color: #F6F6F6;
+    color: rgb(16, 16, 16);
     text-decoration: none;
+    font-weight: 500;
 }
 
 .link:hover{
-    background-color: #810404;
+    background-color: rgba(191, 191, 191, 0.752);
     padding: 5px 7px 5px 7px;
     text-decoration: underline;
-    font-weight: 500;
+    font-weight: 600;
     border-radius: 2px;
+    color: #C00606;
 }
 
 h1, h2{
