--- a/site-fhc/src/ui/components/fundacao/style/direcao/DirecaoSmartphone.css
+++ b/site-fhc/src/ui/components/fundacao/style/direcao/DirecaoSmartphone.css
@@ -9,8 +9,8 @@
         margin: 8% 6% 8% 6%;
     }
 
-    .container-img{
+    .container-direcao img{
         width: 100%;
-        height: 250px;
+        height: auto;
     }
 }
