--- a/site-fhc/src/ui/components/fundacao/style/fundacao/Fundacao.css
+++ b/site-fhc/src/ui/components/fundacao/style/fundacao/Fundacao.css
@@ -19,7 +19,8 @@
     margin-right: 5%;
 }
 
-.container-img{
-    background-color: #C00606;
+.container-fundacao img{
     width: 40%;
+    height: auto;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
