--- a/site-fhc/src/ui/components/fundacao/style/historia/HistoriaSmartphone.css
+++ b/site-fhc/src/ui/components/fundacao/style/historia/HistoriaSmartphone.css
@@ -14,7 +14,8 @@
         margin-left: 0px;
     }
 
-    .container-img{
+    .container-historia img{
         width: 100%;
+        height: auto;
     }
 }
