--- a/site-fhc/src/ui/components/fundacao/style/servicos/ServicosSmartphone.css
+++ b/site-fhc/src/ui/components/fundacao/style/servicos/ServicosSmartphone.css
@@ -20,7 +20,8 @@
         margin-left: 0px;
     }
 
-    .container-img{
+    .container-servicos img{
         width: 100%;
+        height: auto;
     }
 }
