--- a/site-fhc/src/ui/components/home/style/home/Home.css
+++ b/site-fhc/src/ui/components/home/style/home/Home.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 .container-pesquisa-home{
-    background-image: url('../../img/frenteHospital.png');
+    background-image: url('../../img/capa.png');
     background-size: cover;
     background-color: #C00606;
     margin: 0px;
@@ -13,20 +13,21 @@
 .container-pesquisa-home h1{
     margin: 0px;
     padding-top: 10%;
-    font-size: 80px;
+    font-size: 85px;
     font-family: "Barlow Condensed", sans-serif;    
     font-optical-sizing: auto;
-    font-weight: 700;
-    letter-spacing: 4px;
+    font-weight: 750;
+    letter-spacing: 5px;
     color: #F6F6F6;
 }
 
 .container-pesquisa-home h2{
     font-size: 32px;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
     font-weight: 600;
     font-family: "Montserrat", sans-serif;
     color: #F6F6F6;
+    background-size: 100%;
 }
 
 .container-intro-home{
