--- a/site-fhc/src/ui/components/geral/style/header/Header.css
+++ b/site-fhc/src/ui/components/geral/style/header/Header.css
@@ -39,13 +39,17 @@ li{
     font-weight: 500;
 }
 
-.link:hover{
+.link:hover, .active-page{
     background-color: rgba(191, 191, 191, 0.752);
     padding: 5px 7px 5px 7px;
     text-decoration: underline;
     font-weight: 600;
     border-radius: 2px;
     color: #C00606;
+}
+
+.active-page{
+    text-decoration: none;
 }
 
 h1, h2{
