--- a/site-fhc/src/ui/components/geral/style/header/Header.css
+++ b/site-fhc/src/ui/components/geral/style/header/Header.css
@@ -12,16 +12,21 @@ header{
 }
 
 header img{
-    width: 19%;
+    width: 71px;
     height: auto;
     margin: 0px;
     padding-left: 2%;
+}
+
+header img:hover{
+    opacity: 0.7;
 }
 
 header ul{
     margin: 0px;
     width: 100%;
     padding-right: 15px;
+    padding-left: 0px;
     display: flex;
     flex-flow: row-reverse;
     justify-content: right;
@@ -37,6 +42,7 @@ li{
     color: rgb(16, 16, 16);
     text-decoration: none;
     font-weight: 500;
+    width: fit-content;
 }
 
 .link:hover, .active-page{
