Arrumando imagem tela inicial

--- a/site-fhc/src/ui/components/home/style/home/Home.css
+++ b/site-fhc/src/ui/components/home/style/home/Home.css
@@ -59,9 +59,10 @@
     width: 50%;
 }
 
-.img-medicos-home{
+.container-doacao-home img{
     width: 58%;
     height: auto;
+    object-fit: cover;
     margin-right: 2%;
     background-color: #C00606;
 }
