--- a/site-fhc/src/ui/components/home/style/home/HomeSmartphone.css
+++ b/site-fhc/src/ui/components/home/style/home/HomeSmartphone.css
@@ -54,7 +54,7 @@
         flex-flow: column wrap;
     }
 
-    .img-medicos-home{
+    .container-doacao-home img{
         width: 100%;
         height: 250px;
     }
