--- a/site-fhc/src/ui/components/geral/style/header/Header.css
+++ b/site-fhc/src/ui/components/geral/style/header/Header.css
@@ -45,7 +45,7 @@ li{
     width: fit-content;
 }
 
-.link:hover, .active-page{
+.link:hover{
     background-color: rgba(191, 191, 191, 0.752);
     padding: 5px 7px 5px 7px;
     text-decoration: underline;
@@ -55,7 +55,10 @@ li{
 }
 
 .active-page{
-    text-decoration: none;
+    padding: 5px 7px 5px 7px;
+    font-weight: 600;
+    border-radius: 2px;
+    color: #C00606;
 }
 
 h1, h2{
