--- a/site-fhc/src/ui/components/geral/style/header/HeaderSmartphone.css
+++ b/site-fhc/src/ui/components/geral/style/header/HeaderSmartphone.css
@@ -1,3 +1,37 @@
+@media only screen and (max-width: 991px){
+    header label{
+        display: initial;
+    }
+
+    header .navbar{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: rgb(245, 245, 245);
+        border-top: 1px solid rgba(24, 24, 24, 0.093);
+        display: none;
+    }
+
+    header .navbar ul li{
+        width: 100%;
+    }
+
+    header .navbar ul li ul{
+        position: relative;
+        width: 100%;
+    }
+
+    header .navbar ul li ul li{
+        width: 100%;
+        background-color: rgb(202, 202, 202);
+    }
+
+    #menu-bar:checked ~ .navbar{
+        display: initial;
+    }
+}
+
 @media only screen and (max-width: 600px){
     header img{
         width: 80px;
@@ -17,3 +51,7 @@
         display: none;
     }
 }
+
+
+
+
