--- a/site-fhc/src/ui/components/geral/style/header/Header.css
+++ b/site-fhc/src/ui/components/geral/style/header/Header.css
@@ -6,7 +6,7 @@ header{
     position: sticky;
     top: 0;
     align-self: flex-start;
-    flex-flow: row;
+    flex-flow: row nowrap;
     width: 100%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
@@ -47,7 +47,7 @@ li{
 }
 
 .link:hover{
-    background-color: rgba(191, 191, 191, 0.752);
+    background-color: rgba(191, 191, 191, 0.325);
     text-decoration: underline;
     font-weight: 600;
     border-radius: 2px;
