--- a/site-fhc/src/ui/components/home/style/home/Home.css
+++ b/site-fhc/src/ui/components/home/style/home/Home.css
@@ -7,6 +7,7 @@
     margin: 0px;
     height: 550px;
     background-position: initial;
+    /* background-attachment: fixed; */
     background-color: rgba(0, 0, 0, 0.107);
 }
 
