--- a/site-fhc/src/ui/components/home/style/home/HomeSmartphone.css
+++ b/site-fhc/src/ui/components/home/style/home/HomeSmartphone.css
@@ -1,7 +1,14 @@
-@media only screen and (max-width: 950px){
+@media only screen and (max-width: 900px){
 
     .container-pesquisa-home{
-        height: 250px;
+        height: 400px;
+        width: 100%;
+        margin-top: 50px;
+        padding-top: 0%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
     }
 
     .container-pesquisa-home h1{
@@ -35,7 +42,7 @@
     }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 600px) {
 
     .container-pesquisa-home{
         height: 200px;
@@ -66,13 +73,13 @@
     }
 }
 
-@media only screen and (max-width: 650px){
+@media only screen and (max-width: 1400px){
     .container-pesquisa-home{
         background-image: url('../../img/capaSmartphone.png');
     }
 }
 
-@media only screen and (max-width: 440px){
+@media only screen and (max-width: 1100px){
     .container-pesquisa-home{
         background-image: url('../../img/capaSmartphoneSmall.png');
     }
