Arrumando responsividade do menu

--- a/site-fhc/src/ui/components/fundacao/style/fundacao/FundacaoSmartphone.css
+++ b/site-fhc/src/ui/components/fundacao/style/fundacao/FundacaoSmartphone.css
@@ -2,6 +2,7 @@
     .container-fundacao{
         display: flex;
         flex-flow: column wrap;
+        margin-top: 50px;
     }
 
     .container-conteudo-fundacao{
