--- a/site-fhc/src/ui/components/ouvidoria/style/ouvidoria/OuvidoriaSmartphone.css
+++ b/site-fhc/src/ui/components/ouvidoria/style/ouvidoria/OuvidoriaSmartphone.css
@@ -3,7 +3,7 @@
     .container-titulo h1{
         font-size: 22px;
         text-align: left;
-        margin-top: 2%;
+        margin-top: 50px;
         margin-bottom: 2%;
     }
 
