--- a/site-fhc/src/ui/components/geral/style/header/Header.css
+++ b/site-fhc/src/ui/components/geral/style/header/Header.css
@@ -38,29 +38,6 @@ li{
     list-style: none;
 }
 
-.link{
-    color: rgb(16, 16, 16);
-    text-decoration: none;
-    font-weight: 500;
-    width: fit-content;
-    padding: 5px 7px 5px 7px;
-}
-
-.link:hover{
-    background-color: rgba(191, 191, 191, 0.325);
-    text-decoration: underline;
-    font-weight: 600;
-    border-radius: 2px;
-    color: #C00606;
-}
-
-.active-page{
-    padding: 5px 7px 5px 7px;
-    font-weight: 600;
-    border-radius: 2px;
-    color: #C00606;
-}
-
 header ul li {
     position: relative;
 }
@@ -91,6 +68,29 @@ header ul li ul li{
     border-bottom: 1px solid rgba(36, 36, 36, 0.081);
 }
 
+.link{
+    color: rgb(16, 16, 16);
+    text-decoration: none;
+    font-weight: 500;
+    width: fit-content;
+    padding: 5px 7px 5px 7px;
+}
+
+.link:hover{
+    background-color: rgba(191, 191, 191, 0.325);
+    text-decoration: underline;
+    font-weight: 600;
+    border-radius: 2px;
+    color: #C00606;
+}
+
+.active-page{
+    padding: 5px 7px 5px 7px;
+    font-weight: 600;
+    border-radius: 2px;
+    color: #C00606;
+}
+
 #ouvidoria{
     border-top: none;
 }
@@ -98,6 +98,8 @@ header ul li ul li{
 #fale-conosco{
     padding-bottom: 20px;
 }
+
+/* pra que isso?: */
 
 h1, h2{
     text-align: center;
