--- a/site-fhc/src/ui/components/ouvidoria/style/ouvidoria/OuvidoriaSmartphone.css
+++ b/site-fhc/src/ui/components/ouvidoria/style/ouvidoria/OuvidoriaSmartphone.css
@@ -32,3 +32,25 @@
         font-size: 13px;
     }
 }
+
+@media only screen and (max-width: 650px){
+    .container-contatos{
+        display: flex;
+        flex-flow: column wrap;
+    }
+
+    .container-telefones{
+        width: 100%;
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+
+    .container-contatos iframe{
+        width: 80%;
+        
+    }
+    
+}
