--- a/site-fhc/src/ui/components/escalas/style/Escalas.css
+++ b/site-fhc/src/ui/components/escalas/style/Escalas.css
@@ -14,6 +14,7 @@
     width: 80%;
     margin: 3% 10% 5% 10%;
     display: flex;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
 }
