--- a/site-fhc/src/ui/components/escalas/style/escala/Escala.css
+++ b/site-fhc/src/ui/components/escalas/style/escala/Escala.css
@@ -27,6 +27,8 @@
     display: flex;
     flex-flow: column wrap;
     width: 100%;
+    align-items: center;
+    justify-content: center;
 }
 
 .container-grupo-pdfs{
