--- a/site-fhc/src/ui/components/geral/style/header/Header.css
+++ b/site-fhc/src/ui/components/geral/style/header/Header.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 header{
     background-color: rgb(245, 245, 245);
     margin: 0px;
@@ -47,9 +50,13 @@ header ul li {
 .link{
     color: rgb(16, 16, 16);
     text-decoration: none;
-    font-weight: 500;
+    font-weight: 600;
     width: fit-content;
     padding: 5px 7px 5px 7px;
+    font-family: "Poppins", sans-serif;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    font-size: small;
 }
 
 .link:hover{
