--- a/site-fhc/src/ui/components/home/style/noticias/Noticias.css
+++ b/site-fhc/src/ui/components/home/style/noticias/Noticias.css
@@ -22,20 +22,30 @@
 }
 
 .container-noticia-home{
+    display: flex;
     flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
     margin: 8px;
     background-color: #F6F6F6;
     padding: 20px;
-    text-align: center;
+    text-align: justify;
+    max-width: 400px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.089), 0 6px 20px 0 rgba(0, 0, 0, 0.105);
 }
 
 .container-noticia-home h3{
     color: #C00606;
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+    white-space: nowrap; 
 }
 
 .container-noticia-home p{
-    margin-bottom: 30px;
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+    white-space: nowrap; 
+    margin-bottom: 0;
 }
 
 .img-noticia{
