--- a/site-fhc/src/ui/components/escalas/style/escalas/Escalas.css
+++ b/site-fhc/src/ui/components/escalas/style/escalas/Escalas.css
@@ -1,3 +1,10 @@
+.loading-overlay{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 180px;
+}
+
 .container-titulo-escalas{
     display: flex;
     flex-flow: column wrap;
