--- a/site-fhc/src/ui/components/ouvidoria/style/ouvidoria/Ouvidoria.css
+++ b/site-fhc/src/ui/components/ouvidoria/style/ouvidoria/Ouvidoria.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-flow: column wrap;
     justify-items: left;
-    align-items: start;
+    align-items: flex-start;
 }
 
 .container-right-ouvidoria{
