Tentando arrumar furos de CSS. Mudanças em FundacaoSmartphone(add 2 primeiros @media) e Noticias(.container-noticias comentario do width)

--- a/site-fhc/src/ui/components/fundacao/style/fundacao/FundacaoSmartphone.css
+++ b/site-fhc/src/ui/components/fundacao/style/fundacao/FundacaoSmartphone.css
@@ -1,8 +1,23 @@
+@media only screen and (max-width: 1200px){
+    .container-fundacao{
+        margin: 100px 5% 0px 5%;
+
+    }
+}
+
+@media only screen and (max-width: 1000px){
+    .container-fundacao{
+        margin: 50px 5% 0px 5%;
+
+    }
+}
+
 @media only screen and (max-width: 950px){
     .container-fundacao{
         display: flex;
         flex-flow: column wrap;
         margin-top: 50px;
+
     }
 
     .container-conteudo-fundacao{
