--- a/site-fhc/src/ui/components/home/style/home/HomeSmartphone.css
+++ b/site-fhc/src/ui/components/home/style/home/HomeSmartphone.css
@@ -81,12 +81,12 @@
 
 @media only screen and (max-width: 1400px){
     .container-pesquisa-home{
-        background-image: url('../../img/capaSmartphone.png');
+        background-image: url('../../img/capaSmartphone.webp');
     }
 }
 
 @media only screen and (max-width: 1100px){
     .container-pesquisa-home{
-        background-image: url('../../img/capaSmartphoneSmall.png');
+        background-image: url('../../img/capaSmartphoneSmall.webp');
     }
 }
