Albúm dos bebês

--- a/site-fhc/src/ui/components/home/style/albumBebes/AlbumBebes.css
+++ b/site-fhc/src/ui/components/home/style/albumBebes/AlbumBebes.css
@@ -22,6 +22,10 @@
     height: 300px;
 }
 
+a.es-header-btn{
+    background-color: #C00606 !important;
+}
+
 .disable-sticky {
     position: static !important;
 }
