--- a/site-fhc/src/ui/components/geral/style/footer/Footer.css
+++ b/site-fhc/src/ui/components/geral/style/footer/Footer.css
@@ -67,7 +67,7 @@ footer{
 }
 
 .link-redes{
-    background-color: #C00606;
+    background-color: #020381 ;
     width: 45px;
     padding: 10px;
     border-radius: 7000px;
