--- a/site-fhc/src/ui/components/home/style/noticias/Noticias.css
+++ b/site-fhc/src/ui/components/home/style/noticias/Noticias.css
@@ -35,7 +35,7 @@
 }
 
 .container-noticia-home h3{
-    color: #C00606;
+    color: #020381 ;
     overflow: hidden; 
     text-overflow: ellipsis; 
     white-space: nowrap; 
