--- a/site-fhc/src/App.css
+++ b/site-fhc/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .btn{
-    background-color: #C00606;
+    background-color: #020381 ;
     padding: 8px 17px 9px 17px;
     text-decoration: none;
     color: #F6F6F6;
@@ -29,7 +29,7 @@
 }
 
 hr{
-    border: solid 2px #C00606;
+    border: solid 2px #020381 ;
     border-radius: 2px;
     width: 60px;
     margin: 0px;
