--- a/site-fhc/src/index.css
+++ b/site-fhc/src/index.css
@@ -11,6 +11,20 @@ body {
   background-color: rgb(242, 242, 242);
 }
 
+body::-webkit-scrollbar {
+  width: 7px;               /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: #c4c4c615;        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #cacacb;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 0px solid orange;  /* creates padding around scroll thumb */
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
