--- a/site-fhc/src/ui/components/geral/style/header/Header.css
+++ b/site-fhc/src/ui/components/geral/style/header/Header.css
@@ -63,14 +63,14 @@ header ul li {
 .link:hover{
     font-weight: 700;
     border-radius: 2px;
-    color: #C00606;
+    color: #020381 ;
 }
 
 .active-page{
     padding: 5px 7px 5px 7px;
     font-weight: 700;
     border-radius: 2px;
-    color: #C00606;
+    color: #020381 ;
 }
 
 h1, h2{
