--- a/site-fhc/src/ui/components/home/style/noticias/Noticias.css
+++ b/site-fhc/src/ui/components/home/style/noticias/Noticias.css
@@ -11,6 +11,8 @@
 .container-noticias{
     display: flex;
     width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .container-noticias-home h2{
