--- a/site-fhc/src/ui/components/fundacao/style/direcao/Direcao.css
+++ b/site-fhc/src/ui/components/fundacao/style/direcao/Direcao.css
@@ -26,6 +26,6 @@
 
 .container-direcao img {
     width: 40%;
-    height: auto;
+    height: fit-content;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
