--- a/site-fhc/src/ui/components/home/style/home/Home.css
+++ b/site-fhc/src/ui/components/home/style/home/Home.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 .container-pesquisa-home{
-    background-image: url('../../img/capa.webp');
+    background-image: url('../../img/capaSite.png');
     background-size: cover;
-    background-color: #020381 ;
+    background-color: #020381;
     margin: 0px;
-    height: 550px;
+    height: 600px;
     background-position: initial;
     background-color: rgba(0, 0, 0, 0.107);
 }
@@ -44,7 +44,7 @@
 
 .container-fundacao-home h2{
     text-align: left;
-    border-bottom: 2px #020381 ;
+    border-bottom: 2px #020381;
     margin: 0px;
     margin-bottom: 2%;
 }
