--- a/site-fhc/src/ui/components/home/style/noticias/NoticiasSmartphone.css
+++ b/site-fhc/src/ui/components/home/style/noticias/NoticiasSmartphone.css
@@ -10,6 +10,7 @@
     .container-noticia-home {
         width: 100%; 
         margin-bottom: 20px; 
+        margin-left: 0px;
     }
 
     .container-noticia-home p{
