--- a/site-fhc/src/ui/components/home/style/home/Home.css
+++ b/site-fhc/src/ui/components/home/style/home/Home.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 .container-pesquisa-home{
-    background-image: url('../../img/capaSite.png');
+    background: linear-gradient(rgba(21, 23, 52, 0.801), rgba(21, 23, 52, 0.2)),url('../../img/servicos.webp');
     background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     background-color: #020381;
     margin: 0px;
     height: 600px;
@@ -14,7 +17,7 @@
     margin: 0px;
     padding-top: 10%;
     font-size: 85px;
-    font-family: "Barlow Condensed", sans-serif;    
+    font-family: "Montserrat", sans-serif;    
     font-optical-sizing: auto;
     font-weight: 750;
     letter-spacing: 5px;
@@ -23,7 +26,7 @@
 
 .container-pesquisa-home h2{
     font-size: 32px;
-    letter-spacing: 3px;
+    letter-spacing: 9px;
     font-weight: 600;
     font-family: "Montserrat", sans-serif;
     color: #F6F6F6;
