--- a/site-fhc/src/ui/components/home/style/home/HomeSmartphone.css
+++ b/site-fhc/src/ui/components/home/style/home/HomeSmartphone.css
@@ -1,25 +1,34 @@
+@media only screen and (max-width: 1210px){
+    .container-pesquisa-home h1{
+        padding-top: 17%;
+    }
+}
+
+@media only screen and (max-width: 1027px){
+    .container-doacao-conteudo-home h2{
+        font-size: 35px;
+        padding-bottom: 30px;
+    }
+
+    .container-doacao-conteudo-home a{
+        font-size: 19px;
+    }
+}
+
 @media only screen and (max-width: 900px){
 
     .container-pesquisa-home{
-        height: 400px;
+        height: 600px;
         width: 100%;
-        margin-top: 50px;
+        margin-top: 10px;
         padding-top: 0%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-content: center;
-        background-size: contain; /* Alteração para 'contain' em telas menores */
-        /* Se necessário, ajuste o posicionamento da imagem de fundo */
-        background-position: center;
-    }
-
-    .container-pesquisa-home h1{
-        font-size: 50px;
-    }
-
-    .container-pesquisa-home h2{
-        font-size: 15px;
+        background-size: cover; 
+        background-position: initial;
+        background-position: center center;
     }
 
     .container-intro-home{
@@ -43,23 +52,31 @@
         display: flex;
         width: 100%;
     }
+
+    .container-doacao-conteudo-home h2{
+        font-size: 40px;
+        padding-bottom: 25px;
+    }
+
+    .container-doacao-conteudo-home a{
+        font-size: 20px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
 
     .container-pesquisa-home{
-        height: 200px;
-        background-size: contain; /* Alteração para 'contain' em telas menores */
-        /* Se necessário, ajuste o posicionamento da imagem de fundo */
-        background-position: center;
+        height: 600px;
+        background-size: cover; 
+        background-position: center center;
     }
 
     .container-pesquisa-home h1{
-        font-size: 40px;
+        font-size: 50px;
     }
 
     .container-pesquisa-home h2{
-        font-size: 10px;
+        font-size: 20px;
     }
 
     .container-doacao-home{
@@ -81,12 +98,12 @@
 
 @media only screen and (max-width: 1400px){
     .container-pesquisa-home{
-        background-image: url('../../img/capaSmartphone.webp');
+        /* background-image: url('../../img/capaSmartphone.webp'); */
     }
 }
 
 @media only screen and (max-width: 1100px){
     .container-pesquisa-home{
-        background-image: url('../../img/capaSmartphoneSmall.webp');
+        /* background-image: url('../../img/capaSmartphoneSmall.webp'); */
     }
 }
