--- a/site-fhc/src/ui/components/geral/style/footer/Footer.css
+++ b/site-fhc/src/ui/components/geral/style/footer/Footer.css
@@ -36,6 +36,11 @@ footer{
     font-size: 13px;
 }
 
+.container-dados-footer img{
+    width: 10%;
+    height: auto;
+}
+
 .container-redes-footer{
     display: flex;
     flex-flow: column wrap;
