--- a/site-fhc/src/ui/components/geral/style/header/Header.css
+++ b/site-fhc/src/ui/components/geral/style/header/Header.css
@@ -48,6 +48,20 @@ header ul li {
 
 }
 
+/* header ul a:not(.btn)::after{
+    content: "";
+    background-color: #020381;
+    height: 3px;
+    width: 0%;
+    display: block;
+    margin: 0 auto;
+    transition: 0.3s;
+}
+
+header ul a:hover::after{
+    width: 100%;
+} */
+
 .link{
     color: rgb(16, 16, 16);
     text-decoration: none;
